--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styless.css">
     <title>Book Store</title>
 </head>
 <body>
-    <div>
-        <nav>
-            <a href="All.html">All</a>
-            <a href="Psycho.html">Psychology</a>
-            <a href="Litre.html">Literature</a>
-            <a href="Biogra.html">Biography</a>
-            <a href="Edu.html">Educational</a>
-            <div class="animation start-All"></div>
-        </nav>
-    </div>
+    <input id="test" type="checkbox" />
+<label for="test">
+    <svg class="burger" width="86" height="60" viewbox="0 0 150 150">
+        <g stroke-width="12">   
+            <line x1="6" y1="6" x2="80" y2="6"></line>
+            <line x1="6" y1="28" x2="80" y2="28"></line>
+            <line x1="6" y1="50" x2="80" y2="50"> </line>
+        </g>
+    </svg>
+    <svg class="close" width="86" height="60" viewbox="0 0 150 150">
+        <g stroke-width="12">   
+            <line x1="42" y1="6" x2="42" y2="80"></line>
+            <line x1="6" y1="42" x2="80" y2="42"></line>
+        </g>
+    </svg>
+</label>
+<div class="menu">
+    <div><a href="all.html">All</a></div>
+    <div><a href="psychology.html">Psychology</a></div>
+    <div><a href="literature.html">Literature</a></div>
+    <div><a href="biography.html">Biography</a></div>
+    <div><a href="educational.html">Educational</a></div>
+</div>
+
+<span class="main">
+    <span>
+        <h1>Ever Grow Book Store</h1>
+    </span>
+</span>
 </body>
 </html>
